--- a/grokking-machine-learning/09-decision-trees/02_decision_tree_graphical_boundary.ipynb
+++ b/grokking-machine-learning/09-decision-trees/02_decision_tree_graphical_boundary.ipynb
@@ -6,7 +6,7 @@
       "name": "02-decision-tree-graphical-boundary.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhBebgJpy8QhV7eGOJvJ39",
+      "authorship_tag": "ABX9TyMINnLX9bIZev4mHc8T8kzy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -485,11 +485,11 @@
         "decision_tree.score(features, labels)"
       ],
       "metadata": {
-        "id": "eqM-Wm9LonJq",
-        "outputId": "5af7ff00-5b51-4b7e-fe1d-27a3f1ccc385",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eqM-Wm9LonJq",
+        "outputId": "5af7ff00-5b51-4b7e-fe1d-27a3f1ccc385"
       },
       "execution_count": 6,
       "outputs": [
@@ -511,12 +511,12 @@
         "utils.display_tree(decision_tree)"
       ],
       "metadata": {
-        "id": "yngsHqAgpBot",
-        "outputId": "a19d72b2-375a-4495-f979-5e1afe7bdd56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        }
+        },
+        "id": "yngsHqAgpBot",
+        "outputId": "a19d72b2-375a-4495-f979-5e1afe7bdd56"
       },
       "execution_count": 17,
       "outputs": [
@@ -539,12 +539,12 @@
         "utils.plot_model(features, labels, decision_tree)"
       ],
       "metadata": {
-        "id": "NdSeKMuYrxb_",
-        "outputId": "acfaddfa-e0aa-49a2-b18b-1105238a3d2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "NdSeKMuYrxb_",
+        "outputId": "acfaddfa-e0aa-49a2-b18b-1105238a3d2e"
       },
       "execution_count": 21,
       "outputs": [
@@ -589,11 +589,11 @@
         "decision_tree_entropy.score(features, labels)"
       ],
       "metadata": {
-        "id": "TdR93zNZsbOF",
-        "outputId": "ab76cbed-a9aa-4457-d728-fc8c9a64cfb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TdR93zNZsbOF",
+        "outputId": "ab76cbed-a9aa-4457-d728-fc8c9a64cfb1"
       },
       "execution_count": 22,
       "outputs": [
@@ -615,12 +615,12 @@
         "utils.display_tree(decision_tree_entropy)"
       ],
       "metadata": {
-        "id": "1Ktybn1LsrG5",
-        "outputId": "8c25cbfa-cccb-4fdb-c3ed-9881acfbec2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        }
+        },
+        "id": "1Ktybn1LsrG5",
+        "outputId": "8c25cbfa-cccb-4fdb-c3ed-9881acfbec2b"
       },
       "execution_count": 23,
       "outputs": [
@@ -643,12 +643,12 @@
         "utils.plot_model(features, labels, decision_tree_entropy)"
       ],
       "metadata": {
-        "id": "VmpFGLxUsxxL",
-        "outputId": "9fc23110-103e-48cc-f386-f7806be5e9c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "VmpFGLxUsxxL",
+        "outputId": "9fc23110-103e-48cc-f386-f7806be5e9c7"
       },
       "execution_count": 24,
       "outputs": [
@@ -669,7 +669,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Building decision tree of depth-wise"
+        "##Building decision tree depth-wise"
       ],
       "metadata": {
         "id": "M_dv4tL_s_D-"
@@ -693,11 +693,11 @@
         "decision_tree_depth_1.score(features, labels)"
       ],
       "metadata": {
-        "id": "XtqacLwqtFW3",
-        "outputId": "0714abfe-3a51-4472-a90e-dfafa317dee3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XtqacLwqtFW3",
+        "outputId": "0714abfe-3a51-4472-a90e-dfafa317dee3"
       },
       "execution_count": 25,
       "outputs": [
@@ -719,12 +719,12 @@
         "utils.plot_model(features, labels, decision_tree_depth_1)"
       ],
       "metadata": {
-        "id": "ihfytEBQtiDd",
-        "outputId": "5d0ee5b7-b5c1-46c3-db99-9021328d8637",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "ihfytEBQtiDd",
+        "outputId": "5d0ee5b7-b5c1-46c3-db99-9021328d8637"
       },
       "execution_count": 27,
       "outputs": [
@@ -748,12 +748,12 @@
         "utils.display_tree(decision_tree_depth_1)"
       ],
       "metadata": {
-        "id": "WojjvQo0te68",
-        "outputId": "11142753-fcf9-4725-a556-e28952902d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
-        }
+        },
+        "id": "WojjvQo0te68",
+        "outputId": "11142753-fcf9-4725-a556-e28952902d33"
       },
       "execution_count": 26,
       "outputs": [
@@ -788,11 +788,11 @@
         "decision_tree_depth_2.score(features, labels)"
       ],
       "metadata": {
-        "id": "frK_fywntulA",
-        "outputId": "e56fb299-caa2-4a18-9dd5-f093ddab0e79",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "frK_fywntulA",
+        "outputId": "e56fb299-caa2-4a18-9dd5-f093ddab0e79"
       },
       "execution_count": 28,
       "outputs": [
@@ -814,12 +814,12 @@
         "utils.plot_model(features, labels, decision_tree_depth_2)"
       ],
       "metadata": {
-        "id": "xmXO0H_7t0bo",
-        "outputId": "511db78c-d772-47e1-af59-83d7b75d6f4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "xmXO0H_7t0bo",
+        "outputId": "511db78c-d772-47e1-af59-83d7b75d6f4f"
       },
       "execution_count": 29,
       "outputs": [
@@ -843,12 +843,12 @@
         "utils.display_tree(decision_tree_depth_2)"
       ],
       "metadata": {
-        "id": "G7lsxDI-t339",
-        "outputId": "67182bf6-7e88-4afd-f9ee-c0692bb7928d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        }
+        },
+        "id": "G7lsxDI-t339",
+        "outputId": "67182bf6-7e88-4afd-f9ee-c0692bb7928d"
       },
       "execution_count": 30,
       "outputs": [
@@ -883,11 +883,11 @@
         "decision_tree_depth_3.score(features, labels)"
       ],
       "metadata": {
-        "id": "zkTJF-yNuAgU",
-        "outputId": "e5a93ead-5f86-472f-f808-79ce81fa9ed4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zkTJF-yNuAgU",
+        "outputId": "e5a93ead-5f86-472f-f808-79ce81fa9ed4"
       },
       "execution_count": 31,
       "outputs": [
@@ -909,12 +909,12 @@
         "utils.plot_model(features, labels, decision_tree_depth_3)"
       ],
       "metadata": {
-        "id": "iapFfCQ_uFsn",
-        "outputId": "a8db46f3-ce42-4dc2-c2b8-770579825dfb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "iapFfCQ_uFsn",
+        "outputId": "a8db46f3-ce42-4dc2-c2b8-770579825dfb"
       },
       "execution_count": 32,
       "outputs": [
@@ -938,12 +938,12 @@
         "utils.display_tree(decision_tree_depth_3)"
       ],
       "metadata": {
-        "id": "mpmJus3EuJxE",
-        "outputId": "731d7985-ad86-4de4-e34e-85d1924bbd6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 365
-        }
+        },
+        "id": "mpmJus3EuJxE",
+        "outputId": "731d7985-ad86-4de4-e34e-85d1924bbd6f"
       },
       "execution_count": 33,
       "outputs": [
