--- a/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
+++ b/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9HziE5+Y/RxW5X7Q3tt8G",
+      "authorship_tag": "ABX9TyPRCjGHo6S1Tuqlha9Xzo86",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "vpCaukoZc2bM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "id": "bA6YUwP1c_KM",
         "outputId": "c86c45d8-265c-4513-b036-3ae19773f45e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "Khw2AeAidQ7r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,32 +126,10 @@
         "rm -rf cardataset.zip"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8EuMmwDKdXEm",
-        "outputId": "9af39570-d2ae-42de-af1c-87186c951f3c"
+        "id": "8EuMmwDKdXEm"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading cardataset.zip to /content\n",
-            "\r  0% 0.00/103k [00:00<?, ?B/s]\n",
-            "\r100% 103k/103k [00:00<00:00, 63.1MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -176,7 +154,7 @@
         "id": "US7ds406eEwl",
         "outputId": "af82e5c2-5724-4b09-d488-c856f6efe927"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -203,7 +181,7 @@
         "id": "49xKhrCyeqLb",
         "outputId": "6651802d-a4fc-4af2-c653-30f048510f4e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +449,7 @@
       "metadata": {
         "id": "tOpxyr0FfAw7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -487,7 +465,7 @@
         "id": "VGcl396AgdYw",
         "outputId": "4c18c683-1e42-487c-cadd-e44c5ec9451c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -781,7 +759,7 @@
         "id": "uZPbhvUvhmcM",
         "outputId": "812d11e4-f5dc-4cca-fcc1-e176035275d3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -817,7 +795,7 @@
         "id": "9YF3_sq3j9Vc",
         "outputId": "afd750f4-2473-4fa1-ad26-ddff5a99bee3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -843,6 +821,8 @@
         "One way to solve this problem is log transformation. If we\n",
         "apply the log function to the prices, it removes the undesired effect.\n",
         "\n",
+        "$$y_{new} = log(y + 1)$$\n",
+        "\n",
         "The +1 part is important in cases that have zeros. \n",
         "\n",
         "The logarithm of zero is minus infinity,\n",
@@ -867,7 +847,7 @@
         "id": "f5F_6oAmmFhu",
         "outputId": "b210ec42-2bca-4747-943f-b00284f2133b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -893,7 +873,7 @@
         "id": "Wgml9y-DmK6K",
         "outputId": "bbee8615-b056-464b-dd70-d4573c4fcd47"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +916,7 @@
         "id": "RqOnB-wYmehf",
         "outputId": "55f575bd-c8ea-492a-b5f6-a472d3430814"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
