--- a/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
+++ b/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPRCjGHo6S1Tuqlha9Xzo86",
+      "authorship_tag": "ABX9TyPq0Zf3aUdCawORNoeIMKoc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "vpCaukoZc2bM"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bA6YUwP1c_KM",
-        "outputId": "c86c45d8-265c-4513-b036-3ae19773f45e"
+        "outputId": "21c13e0e-8be5-492f-9135-647cd5067c30"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "Khw2AeAidQ7r"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "US7ds406eEwl",
-        "outputId": "af82e5c2-5724-4b09-d488-c856f6efe927"
+        "outputId": "090357ba-8ddf-48d1-da30-17109c4e2ae1"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,9 +179,9 @@
           "height": 478
         },
         "id": "49xKhrCyeqLb",
-        "outputId": "6651802d-a4fc-4af2-c653-30f048510f4e"
+        "outputId": "51d13a44-27af-4d9d-e99c-e5bb28cc7cb6"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-befc8b33-26a7-42e9-a03d-ecdfa87be137\">\n",
+              "  <div id=\"df-70759b75-9085-48ed-96cd-8174daeadcaa\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -354,7 +354,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-befc8b33-26a7-42e9-a03d-ecdfa87be137')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-70759b75-9085-48ed-96cd-8174daeadcaa')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -405,12 +405,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-befc8b33-26a7-42e9-a03d-ecdfa87be137 button.colab-df-convert');\n",
+              "          document.querySelector('#df-70759b75-9085-48ed-96cd-8174daeadcaa button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-befc8b33-26a7-42e9-a03d-ecdfa87be137');\n",
+              "          const element = document.querySelector('#df-70759b75-9085-48ed-96cd-8174daeadcaa');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "tOpxyr0FfAw7"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -463,9 +463,9 @@
           "height": 287
         },
         "id": "VGcl396AgdYw",
-        "outputId": "4c18c683-1e42-487c-cadd-e44c5ec9451c"
+        "outputId": "68c432e9-9b77-47f4-fc85-ddfe89a11199"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +501,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bd2a1614-59c3-4f9c-92ca-3ee061f7e967\">\n",
+              "  <div id=\"df-07a3a369-ce0f-4ed3-9beb-e5e216248da9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -638,7 +638,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd2a1614-59c3-4f9c-92ca-3ee061f7e967')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-07a3a369-ce0f-4ed3-9beb-e5e216248da9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -689,12 +689,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bd2a1614-59c3-4f9c-92ca-3ee061f7e967 button.colab-df-convert');\n",
+              "          document.querySelector('#df-07a3a369-ce0f-4ed3-9beb-e5e216248da9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bd2a1614-59c3-4f9c-92ca-3ee061f7e967');\n",
+              "          const element = document.querySelector('#df-07a3a369-ce0f-4ed3-9beb-e5e216248da9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -757,9 +757,9 @@
           "height": 295
         },
         "id": "uZPbhvUvhmcM",
-        "outputId": "812d11e4-f5dc-4cca-fcc1-e176035275d3"
+        "outputId": "c03d44f1-08d7-4101-d5e0-dd165285c25d"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -793,9 +793,9 @@
           "height": 295
         },
         "id": "9YF3_sq3j9Vc",
-        "outputId": "afd750f4-2473-4fa1-ad26-ddff5a99bee3"
+        "outputId": "add5c646-7e12-4263-efcf-79cf65940fed"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -845,9 +845,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f5F_6oAmmFhu",
-        "outputId": "b210ec42-2bca-4747-943f-b00284f2133b"
+        "outputId": "c1b2efd0-cdd0-4714-d589-7d4e261c379b"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -871,9 +871,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wgml9y-DmK6K",
-        "outputId": "bbee8615-b056-464b-dd70-d4573c4fcd47"
+        "outputId": "85f3e3a3-0fcd-4d8a-ff9e-07e62a0f4fb9"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,7 +891,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 12
         }
       ]
     },
@@ -914,9 +914,9 @@
           "height": 295
         },
         "id": "RqOnB-wYmehf",
-        "outputId": "55f575bd-c8ea-492a-b5f6-a472d3430814"
+        "outputId": "34ba7589-b731-40b1-8c71-4a03001d9355"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -956,9 +956,176 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "nbZbJTMsjXuO",
+        "outputId": "30cbb4f3-72c1-480a-f90e-c7fd20b98e79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "make                    0\n",
+              "model                   0\n",
+              "year                    0\n",
+              "engine_fuel_type        3\n",
+              "engine_hp              69\n",
+              "engine_cylinders       30\n",
+              "transmission_type       0\n",
+              "driven_wheels           0\n",
+              "number_of_doors         6\n",
+              "market_category      3742\n",
+              "vehicle_size            0\n",
+              "vehicle_style           0\n",
+              "highway_mpg             0\n",
+              "city_mpg                0\n",
+              "popularity              0\n",
+              "msrp                    0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Splitting Dataset"
+      ],
+      "metadata": {
+        "id": "L4ExMsFqg4Ib"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitting Data into validation, test, and training sets\n",
+        "np.random.seed(2)\n",
+        "\n",
+        "n = len(df)\n",
+        "\n",
+        "# Calculates how many rows should go to train, validation, and test\n",
+        "n_val = int(.2 * n)\n",
+        "n_test = int(.2 * n)\n",
+        "n_train = n - (n_val + n_test)\n",
+        "\n",
+        "idx = np.arange(n)\n",
+        "np.random.shuffle(idx)\n",
+        "\n",
+        "df_shuffled = df.iloc[idx]\n",
+        "\n",
+        "# Splits the shuffled DataFrame into train, validation, and test\n",
+        "df_train = df_shuffled.iloc[: n_train].copy()\n",
+        "df_val = df_shuffled.iloc[n_train: n_train + n_val].copy()\n",
+        "df_test = df_shuffled.iloc[n_train + n_val: ].copy()"
+      ],
+      "metadata": {
+        "id": "NnwWWHOsg5Ue"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's take a smaller array of five elements and shuffle it\n",
+        "idx = np.arange(5)\n",
+        "print(f\"before shuffle {idx}\")\n",
+        "np.random.shuffle(idx)\n",
+        "print(f\"after shuffle {idx}\")"
+      ],
+      "metadata": {
+        "id": "0sA_lgG3iMFb",
+        "outputId": "5496abd7-2318-4d3a-e386-32bdb7f58b5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "before shuffle [0 1 2 3 4]\n",
+            "after shuffle [3 4 2 0 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(2)\n",
+        "idx = np.arange(5)\n",
+        "print(f\"before shuffle {idx}\")\n",
+        "np.random.shuffle(idx)\n",
+        "print(f\"after shuffle {idx}\")"
+      ],
+      "metadata": {
+        "id": "mfzeXJeHi-KC",
+        "outputId": "db91f45c-8d32-4dac-808c-8dca63eb5620",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "before shuffle [0 1 2 3 4]\n",
+            "after shuffle [2 4 1 3 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's apply the log transformation to target variable\n",
+        "y_train_orig = df_train.msrp.values\n",
+        "y_val_orig  = df_val.msrp.values\n",
+        "y_test_orig = df_test.msrp.values\n",
+        "\n",
+        "y_train = np.log1p(df_train.msrp.values)\n",
+        "y_val = np.log1p(df_val.msrp.values)\n",
+        "y_test = np.log1p(df_test.msrp.values)\n",
+        "\n",
+        "del df_train[\"msrp\"]\n",
+        "del df_val[\"msrp\"]\n",
+        "del df_test[\"msrp\"]"
+      ],
+      "metadata": {
+        "id": "-F9NBHy-lMeR"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Linear Regression"
+      ],
+      "metadata": {
+        "id": "QfcPPXO2mBoH"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "nbZbJTMsjXuO"
+        "id": "fI51XNK1mFK9"
       },
       "execution_count": null,
       "outputs": []
