--- a/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
+++ b/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPq0Zf3aUdCawORNoeIMKoc",
+      "authorship_tag": "ABX9TyOmz5SOoqZPTu6UilxkhTYN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "vpCaukoZc2bM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "id": "bA6YUwP1c_KM",
         "outputId": "21c13e0e-8be5-492f-9135-647cd5067c30"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "Khw2AeAidQ7r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
         "id": "US7ds406eEwl",
         "outputId": "090357ba-8ddf-48d1-da30-17109c4e2ae1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +181,7 @@
         "id": "49xKhrCyeqLb",
         "outputId": "51d13a44-27af-4d9d-e99c-e5bb28cc7cb6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "tOpxyr0FfAw7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
         "id": "VGcl396AgdYw",
         "outputId": "68c432e9-9b77-47f4-fc85-ddfe89a11199"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -759,7 +759,7 @@
         "id": "uZPbhvUvhmcM",
         "outputId": "c03d44f1-08d7-4101-d5e0-dd165285c25d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -795,7 +795,7 @@
         "id": "9YF3_sq3j9Vc",
         "outputId": "add5c646-7e12-4263-efcf-79cf65940fed"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -847,7 +847,7 @@
         "id": "f5F_6oAmmFhu",
         "outputId": "c1b2efd0-cdd0-4714-d589-7d4e261c379b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +873,7 @@
         "id": "Wgml9y-DmK6K",
         "outputId": "85f3e3a3-0fcd-4d8a-ff9e-07e62a0f4fb9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +916,7 @@
         "id": "RqOnB-wYmehf",
         "outputId": "34ba7589-b731-40b1-8c71-4a03001d9355"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -966,7 +966,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1031,7 +1031,7 @@
       "metadata": {
         "id": "NnwWWHOsg5Ue"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1050,7 +1050,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1078,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1109,7 @@
       "metadata": {
         "id": "-F9NBHy-lMeR"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1122,10 +1122,52 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Let's implement the normal equation.\n",
+        "\n",
+        "$$\n",
+        "w = (X^TX)^{-1} X^T y\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "tRN_TlcX_XdH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_linear_regression(X, y):\n",
+        "  # adding dummy feature into X\n",
+        "  ones = np.ones(X.shape[0])\n",
+        "  X = np.column_stack([ones, X])\n",
+        "\n",
+        "  XTX = X.T.dot(X)\n",
+        "  XTX_inv = np.linlag.inv(XTX)\n",
+        "  w = XTX_inv.dot(X.T).dot(y)\n",
+        "  # Splits the weights vector into the bias and the rest of the weights\n",
+        "  return w[0], w[1:]"
+      ],
+      "metadata": {
+        "id": "fI51XNK1mFK9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Predicting the price"
+      ],
+      "metadata": {
+        "id": "ZrUZ3VNwAFR8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "fI51XNK1mFK9"
+        "id": "xeaMjJozAGci"
       },
       "execution_count": null,
       "outputs": []
