--- a/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
+++ b/machine-learning-bookcamp/1_car_price_prediction_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOIV5zYrnCtO1sgvipwxGMk",
+      "authorship_tag": "ABX9TyNRcMSRq6R8EfUBba1ovyzv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,22 +84,10 @@
         "drive.mount('/content/gdrive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bA6YUwP1c_KM",
-        "outputId": "c906d927-a745-4312-8828-4b8e43b227a5"
+        "id": "bA6YUwP1c_KM"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -152,7 +140,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "US7ds406eEwl",
-        "outputId": "b7576b98-da02-4570-cc39-41ba707432fd"
+        "outputId": "fbd93300-25f8-47d4-ee28-872624f9cea9"
       },
       "execution_count": 5,
       "outputs": [
@@ -179,7 +167,7 @@
           "height": 478
         },
         "id": "49xKhrCyeqLb",
-        "outputId": "2fe971f2-12cb-49b0-d4b7-b44a5962fb36"
+        "outputId": "caf17fb9-c331-4f18-b2a2-51c394f505e3"
       },
       "execution_count": 6,
       "outputs": [
@@ -217,7 +205,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4725924a-bf6e-453a-b9be-38a25dc7e3a6\">\n",
+              "  <div id=\"df-a19be7b2-3089-40bb-bad5-afe78b28a8da\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -354,7 +342,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4725924a-bf6e-453a-b9be-38a25dc7e3a6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a19be7b2-3089-40bb-bad5-afe78b28a8da')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -405,12 +393,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4725924a-bf6e-453a-b9be-38a25dc7e3a6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a19be7b2-3089-40bb-bad5-afe78b28a8da button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4725924a-bf6e-453a-b9be-38a25dc7e3a6');\n",
+              "          const element = document.querySelector('#df-a19be7b2-3089-40bb-bad5-afe78b28a8da');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -463,7 +451,7 @@
           "height": 287
         },
         "id": "VGcl396AgdYw",
-        "outputId": "b7537dee-3ff0-45c7-8947-a7a1de687f59"
+        "outputId": "3d91fd3c-c68e-4098-958a-775550da383f"
       },
       "execution_count": 8,
       "outputs": [
@@ -501,7 +489,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-425da8b6-6f51-40b9-a0c2-a9b8394585c5\">\n",
+              "  <div id=\"df-d3728cbf-0377-4323-9123-0ae4a35c3500\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -638,7 +626,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-425da8b6-6f51-40b9-a0c2-a9b8394585c5')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d3728cbf-0377-4323-9123-0ae4a35c3500')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -689,12 +677,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-425da8b6-6f51-40b9-a0c2-a9b8394585c5 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d3728cbf-0377-4323-9123-0ae4a35c3500 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-425da8b6-6f51-40b9-a0c2-a9b8394585c5');\n",
+              "          const element = document.querySelector('#df-d3728cbf-0377-4323-9123-0ae4a35c3500');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -757,7 +745,7 @@
           "height": 295
         },
         "id": "uZPbhvUvhmcM",
-        "outputId": "a72e7dce-f2f1-4f5f-f4f2-de681dd1face"
+        "outputId": "a8da0e54-168f-4ed0-f87f-c788ef14e443"
       },
       "execution_count": 9,
       "outputs": [
@@ -793,7 +781,7 @@
           "height": 295
         },
         "id": "9YF3_sq3j9Vc",
-        "outputId": "d17f82dc-3717-439c-a0c4-9564012059f9"
+        "outputId": "28bc906c-2f4a-4ef8-a384-2040ae222254"
       },
       "execution_count": 10,
       "outputs": [
@@ -845,7 +833,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f5F_6oAmmFhu",
-        "outputId": "40d88511-1892-4a95-f348-81dfec2af06d"
+        "outputId": "b5ef86c4-81cc-475f-f543-d7928d66bd9e"
       },
       "execution_count": 11,
       "outputs": [
@@ -871,7 +859,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wgml9y-DmK6K",
-        "outputId": "a3dff9b2-9dbc-449b-ef19-66b8cc70094c"
+        "outputId": "37a63ad1-f620-49e2-b82c-3b9aad5b616f"
       },
       "execution_count": 12,
       "outputs": [
@@ -914,7 +902,7 @@
           "height": 295
         },
         "id": "RqOnB-wYmehf",
-        "outputId": "024dc187-deda-477d-cb9b-9aa564a7ffe1"
+        "outputId": "d3818ec7-a9b8-4437-dfef-618b9cba78ad"
       },
       "execution_count": 13,
       "outputs": [
@@ -961,7 +949,7 @@
       ],
       "metadata": {
         "id": "nbZbJTMsjXuO",
-        "outputId": "c48b9267-82f2-4619-f8c8-9c8a8b59ca39",
+        "outputId": "91aa5dd7-0787-4688-efd3-25096598e845",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1045,7 +1033,7 @@
       ],
       "metadata": {
         "id": "0sA_lgG3iMFb",
-        "outputId": "dc9b37a3-43d8-436d-a739-8c647f3a5a50",
+        "outputId": "7bab1ea1-983d-4844-c77f-92f0d453bdb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1073,7 +1061,7 @@
       ],
       "metadata": {
         "id": "mfzeXJeHi-KC",
-        "outputId": "f7fdfcc9-97e3-49b9-dcd4-595310425617",
+        "outputId": "35480dcd-40bd-429d-d83f-a08c00e5450b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1151,7 +1139,7 @@
       "metadata": {
         "id": "fI51XNK1mFK9"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1189,7 +1177,7 @@
       "metadata": {
         "id": "1Pa0YybCHfX2"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1201,7 +1189,7 @@
       "metadata": {
         "id": "CcCb8ImmIb32"
       },
-      "execution_count": 25,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1213,7 +1201,7 @@
       "metadata": {
         "id": "6Tau9nlzJL2V"
       },
-      "execution_count": 26,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1233,13 +1221,13 @@
       ],
       "metadata": {
         "id": "D3kz4RXgJgpQ",
-        "outputId": "4766bba7-2aa0-4be6-b993-6762428c5702",
+        "outputId": "2f836f6a-97b6-4d63-e980-632ecb00fea1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
         }
       },
-      "execution_count": 27,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1281,9 +1269,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# let's define root mean squared error\n",
+        "def rmse(y, y_pred):\n",
+        "  error = y_pred - y\n",
+        "  mse = (error ** 2).mean()\n",
+        "  return np.sqrt(mse)"
+      ],
       "metadata": {
         "id": "-aYZOT55Ld2I"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's evaluate the quality of the model\n",
+        "rmse(y_train, y_pred)"
+      ],
+      "metadata": {
+        "id": "NPV2vHSPKhmX",
+        "outputId": "20df067a-a976-4fab-a65c-ec7affb7a4f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7554192603920132"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Validating the model"
+      ],
+      "metadata": {
+        "id": "LDFvFLCTOwtu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7WEVQipEOx27"
       },
       "execution_count": null,
       "outputs": []
