--- a/machine-learning-bookcamp/3_churn_prediction_project.ipynb
+++ b/machine-learning-bookcamp/3_churn_prediction_project.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO6eNRj8g8g7FicOqMf4Yx/",
+      "authorship_tag": "ABX9TyN6xe7HXvyyUjpXemVD+J8e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "vpCaukoZc2bM"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "Khw2AeAidQ7r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "id": "US7ds406eEwl",
         "outputId": "b83f09b9-487e-4a8f-8de3-41eb55cb06a1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
         "id": "49xKhrCyeqLb",
         "outputId": "9ff227e5-47bc-4a7a-af95-7cf320f7b9fc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -521,7 +521,7 @@
         "id": "qlvmWW7482Br",
         "outputId": "ab066507-4920-4375-9cc3-bf23f7b4de47"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +869,7 @@
         "id": "U8r1UGu789ql",
         "outputId": "9b67e2ee-1726-48ef-ed3f-2b25bd91c043"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
           "height": 394
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1127,7 @@
       "metadata": {
         "id": "gJ6bAyO3BM0s"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1143,7 +1143,7 @@
       "metadata": {
         "id": "8RxmSWRRCIIn"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1159,7 +1159,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,7 +1191,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1223,7 +1223,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,7 +1258,7 @@
           "height": 708
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1612,7 +1612,7 @@
       "metadata": {
         "id": "CPM1VXhp2jmc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1628,7 +1628,7 @@
           "height": 299
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1933,7 +1933,7 @@
       "metadata": {
         "id": "jMF2Y3fq609Q"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1946,7 +1946,7 @@
       "metadata": {
         "id": "Q0pd3UeC7uwG"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1959,7 +1959,7 @@
       "metadata": {
         "id": "n_M-124_78Ae"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1994,7 +1994,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2042,7 +2042,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2094,7 +2094,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2137,7 +2137,7 @@
       "metadata": {
         "id": "-KciNwlaWnDb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2153,7 +2153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2253,7 +2253,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2278,7 +2278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2304,7 +2304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2349,7 +2349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2374,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2400,7 +2400,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2475,11 +2475,10 @@
         "id": "pMYSy2HU5m-z",
         "outputId": "9e202cac-1189-428a-b43a-50a1f7fd4381",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2644,11 +2643,10 @@
         "id": "RhuepQvz72lm",
         "outputId": "a468ed41-c775-42fc-f3e6-532f691bff24",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4983,7 +4981,7 @@
       "metadata": {
         "id": "4gTTfuWRCOIO"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5004,7 +5002,7 @@
           "height": 395
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5349,7 +5347,7 @@
           "height": 143
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5508,7 +5506,7 @@
           "height": 143
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5658,6 +5656,101 @@
       ],
       "metadata": {
         "id": "Jpa2XuNrIPpW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Before we proceed to training, however, we need to perform the feature engineering\n",
+        "step: transforming all categorical variables to numeric features.\n",
+        "\n",
+        "Let's use one-hot encoding for categorical variables."
+      ],
+      "metadata": {
+        "id": "dyQrMBUS9wd8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert dataframe to a list of dictionaries\n",
+        "train_dict = df_train[categorical + numerical].to_dict(orient=\"records\")\n",
+        "train_dict[0]"
+      ],
+      "metadata": {
+        "id": "qjdL0mYfAz9j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we can use DictVectorizer for converting the dictionaries to a matrix.\n",
+        "\n",
+        "If a feature is categorical, it applies the one-hot encoding\n",
+        "scheme, but if a feature is numerical, it’s left intact."
+      ],
+      "metadata": {
+        "id": "4kgE9ZUeCh30"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert the list of dictionaries to matrix\n",
+        "dv = DictVectorizer(sparse=False)\n",
+        "dv.fit(train_dict)\n",
+        "x_train = dv.transform(train_dict)\n",
+        "\n",
+        "print(f\"Old shape: {df_train_full.shape}\")\n",
+        "print(f\"New shape: {x_train.shape}\")\n",
+        "x_train[0]"
+      ],
+      "metadata": {
+        "id": "T0JnbzdjC79S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# let's see the names of all these columns\n",
+        "dv.get_feature_names()"
+      ],
+      "metadata": {
+        "id": "0mUa3y14EJ6j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As we see, for each categorical feature it creates multiple columns for each of its distinct values.\n",
+        "\n",
+        "Features such as `tenure` and `totalcharges` keep the original names because\n",
+        "they are numerical; therefore, `DictVectorizer` doesn’t change them."
+      ],
+      "metadata": {
+        "id": "WKUN5_riEWxD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Classification model"
+      ],
+      "metadata": {
+        "id": "45mEQuX-Ekto"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "_ALpEf25Elzj"
       }
     }
   ]
